--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://your-heroku-app-name.herokuapp.com
+REACT_APP_API_URL=https://forge-api-backend-acc422335e48.herokuapp.com/
