--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+Deprecated==1.2.18
 fastapi==0.115.12
 frozenlist==1.5.0
 google-auth==2.38.0
@@ -17,6 +18,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+limits==4.6
 MarkupSafe==3.0.2
 multidict==6.3.2
 mypy-extensions==1.0.0
@@ -32,6 +34,7 @@ python-dotenv==1.1.0
 python-multipart==0.0.20
 requests==2.32.3
 rsa==4.9
+slowapi==0.1.9
 sniffio==1.3.1
 starlette==0.46.1
 typing-inspection==0.4.0
@@ -39,4 +42,5 @@ typing_extensions==4.13.1
 urllib3==2.3.0
 uvicorn==0.34.0
 websockets==15.0.1
+wrapt==1.17.2
 yarl==1.18.3
